# virt-lightning

./: .gitignore  .travis.yml  CNAME  DEBUGGING.md  MANIFEST.in  README.md  README.md.j2  azure-pipelines.yml  changelog.md  fetch  pyproject.toml  refresh_readme.py  requirements.txt  setup.py  test-requirements.txt  tox.ini  virt-lightning  virt-lightning.yaml
.github/workflows/: codeql.yml  release.yml  tests.yml  tox.yml
ansible/: playbook.yml  requirements.yml  test.sh  virt-lightning.yaml
ansible/host_vars/: debian9-system  fedora29-user
ansible/roles/virt_lightning/defaults/: main.yml
ansible/roles/virt_lightning/files/: virt-lightning.xml
ansible/roles/virt_lightning/tasks/: config.yml  image.yml  install.yml  main.yml  prepare_session.yml  prepare_system.yml  test.yml  venv.yml
ansible/roles/virt_lightning/templates/: config.ini.j2  polkit.rules.j2  pool.xml.j2
ansible/roles/virt_lightning/vars/: Debian-9.yml  Debian.yml  Fedora-29.yml  Ubuntu-16.04.yml  Ubuntu-18.04.yml  Ubuntu-18.10.yml
conf/: example.ini
images/: centos-7.sh  debian-9.sh  defines  fedora-29.sh  image  index.md  rhel-7.4.sh  rhel-7.5.sh  rhel-7.6.sh  ubuntu-16.04.sh  ubuntu-18.04.sh
images/distros/: centos-7  centos-8  debian-10  debian-9  fedora-29  fedora-30  fedora-31  rhel-6.10  rhel-7.4  rhel-7.5  rhel-7.6  rhel-7.7  rhel-8.0  ubuntu-14.04  ubuntu-16.04  ubuntu-18.04  ubuntu-18.10  ubuntu-19.04  ubuntu-19.10
images/extras/: esxi-6.5  esxi-6.7
images/freebsd/: README.md  bootstrap.py  prepare.sh
tests/: conftest.py  test_configure.py  test_configure_domain.py  test_domain.py  test_hv.py  test_lvdomain.py  test_metadata.py  test_metadata_generation.py  test_userdata.py  test_util.py
tools/: release
virt-lightning.org/: README.md  bench_images_startup.py  images.json  refresh.py  test.py  update.sh
virt-lightning.org/etc/caddy/conf.d/: virt-lightning.org.conf
virt-lightning.org/www/images/: index.md
virt_lightning/: __init__.py  api.py  configuration.py  metadata.py  shell.py  shell_cli2.py  symbols.py  templates.py  ui.py  util.py  virt_lightning.py
