[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "virt-lightning"
version = "2.4.1"
description = "Deploy your testing VM in a couple of seconds"
readme = "README.md"
authors = [{ name = "Gonéri Le Bouder", email="goneri@lebouder.net" }]
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["libvirt", "cloud", "qemu", "cloudinit"]
dependencies = [
    "libvirt-python>=11.10.0",
    "pyyaml>=6.0.3",
    "urwid>=2.6.16",
]

[project.urls]
Homepage = "https://virt-lightning.org/"
Source = "https://github.com/virt-lightning/virt-lightning"

[project.optional-dependencies]
test = [
    "tox",
]

[project.scripts]
virt-lightning = "virt_lightning.shell:main"
vl = "virt_lightning.shell:main"


[tool]

[tool.setuptools]
packages = ["virt_lightning"]

[tool.ruff]
line-length = 100
lint.select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
#    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
#    "S",  # bandit
    "SIM",  # flake8-simplify
#    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
lint.ignore = ["N806"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "flake8-blind-except==0.2.0",
    "flake8-broken-line==1.0.0",
    "flake8-builtins==1.5.3",
    "flake8-comprehensions==3.13.0",
    "flake8-debugger==4.0.0",
    "flake8-eradicate==1.5.0",
    "flake8-logging-format==0.7.4",
    "flake8-pep3101==1.3.0",
    "flake8-print==4.0.0",
    "flake8-quotes==3.4.0",
    "flake8-rst-docstrings==0.2.5",
    "flake8-string-format==0.3.0",
    "mypy>=1.14.1",
    "pep8-naming>=0.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "types-pyyaml>=6.0.12.20241230",
    "urllib3>=2.2.3",
]
